some fix with undo/redo operation, change language, change size, add bar menu

--- a/MiniPaint/Lang/langResourcePl.resx
+++ b/MiniPaint/Lang/langResourcePl.resx
@@ -117,7 +117,46 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="menu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
+  <data name="action" xml:space="preserve">
+    <value>Akcje</value>
+  </data>
+  <data name="clean" xml:space="preserve">
+    <value>Wyczyść</value>
+  </data>
+  <data name="color" xml:space="preserve">
+    <value>Kolor</value>
+  </data>
+  <data name="english" xml:space="preserve">
+    <value>Angielski</value>
+  </data>
+  <data name="exit" xml:space="preserve">
+    <value>Zakończ</value>
+  </data>
+  <data name="fileToolStripMenuItem" xml:space="preserve">
+    <value>Plik</value>
+  </data>
+  <data name="languageToolStripMenuItem" xml:space="preserve">
+    <value>Język</value>
+  </data>
+  <data name="open" xml:space="preserve">
+    <value>Otwórz</value>
+  </data>
+  <data name="polish" xml:space="preserve">
+    <value>Polski</value>
+  </data>
+  <data name="redo" xml:space="preserve">
+    <value>Przywróć</value>
+  </data>
+  <data name="save" xml:space="preserve">
+    <value>Zapisz</value>
+  </data>
+  <data name="shape" xml:space="preserve">
+    <value>Kształty</value>
+  </data>
+  <data name="size" xml:space="preserve">
+    <value>Rozmiar</value>
+  </data>
+  <data name="undo" xml:space="preserve">
+    <value>Cofnij</value>
+  </data>
 </root>
